--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "@cwi/parapet",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Serverless Interactions with Bridgeport",
   "main": "index.js",
+  "publishConfig": {
+    "registry": "https://npm-registry.babbage.systems/"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -17,6 +21,7 @@
   },
   "homepage": "https://github.com/p2ppsr/parapet#readme",
   "devDependencies": {
+    "jest": "^26.6.0",
     "standard": "^14.3.4"
   },
   "dependencies": {
