--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "@cwi/parapet",
-  "version": "0.1.1",
+  "name": "parapet-js",
+  "version": "0.1.0",
   "description": "Serverless Interactions with Bridgeport",
   "main": "index.js",
-  "publishConfig": {
-    "registry": "https://npm-registry.babbage.systems/"
-  },
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch"
@@ -15,7 +12,7 @@
     "url": "git+https://github.com/p2ppsr/parapet.git"
   },
   "author": "Peer-to-peer Privacy Systems Research, LLC",
-  "license": "PROPRIETARY",
+  "license": "Open BSV License",
   "bugs": {
     "url": "https://github.com/p2ppsr/parapet/issues"
   },
@@ -25,7 +22,7 @@
     "standard": "^14.3.4"
   },
   "dependencies": {
-    "@cwi/boomerang": "^0.1.0",
+    "boomerang-http": "^0.1.0",
     "eventsource": "^1.0.7",
     "node-fetch": "^2.6.1"
   }
